# hyperliquid-farming-bot

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  railway.toml
.github/workflows/: ci.yml
.ruff_cache/0.15.4/: 689958301690863943
backend/: .env.example  Dockerfile  README.md  __init__.py  agent.py  config.py  main.py  pyproject.toml  risk.py
backend/app/: config.py  database.py  main.py  risk.py
backend/app/strategies/: hyperevm_farmer.py  perp_trader.py  points_tracker.py
backend/strategies/: __init__.py  defi_farming.py  perps.py  point_farmer.py
backend/tests/: test_api.py  test_bot.py
frontend/: README.md  next.config.js  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts  tsconfig.json  vercel.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AirdropScore.tsx  BotControls.tsx  EventFeed.tsx  PnLChart.tsx  PnlChart.tsx  PointsPanel.tsx  PositionsTable.tsx  StatCard.tsx  StatusCard.tsx  TradeHistory.tsx  TradeTable.tsx
frontend/lib/: api.ts  hooks.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: Dashboard.tsx
frontend/src/lib/: api.ts
src/: __init__.py  bot.py  config.py  database.py  main.py  risk.py
src/bot/: orchestrator.py
src/strategies/: defi_farming.py  hyper_evm_farmer.py  perps.py  perps_trader.py  point_farmer.py  points_tracker.py
tests/: test_config.py  test_core.py
