[project]
name = "hyperliquid-farming-bot"
version = "0.1.0"
description = "Hyperliquid HyperEVM airdrop farming bot — Season 3"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "httpx>=0.27.0",
    "web3>=6.15.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.0",
    "hyperliquid-python-sdk>=0.7.0",
    "eth-account>=0.11.0",
    "aiosqlite>=0.20.0",
    "apscheduler>=3.10.4",
    "python-multipart>=0.0.9",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = ["E501", "E402", "F401"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
