[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hyperliquid-farming-bot"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
    "aiohttp>=3.9",
    "aiosqlite>=0.20",
    "sqlalchemy>=2.0",
    "sse-starlette>=2.0",
    "eth-account>=0.11",
    "web3>=6.20",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = ["E501", "E402", "F401"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
