[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hyperliquid-farming-bot"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
    "sse-starlette>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
]

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = ["E501", "E402", "F401", "E712"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
