[project]
name = "hyperliquid-farming-bot"
version = "0.1.0"
description = "Hyperliquid HyperEVM Airdrop Farming Bot"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "httpx>=0.25.0",
    "sse-starlette>=1.8.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = ["E501", "E402", "F401", "E712"]
