[project]
name = "hyperliquid-farming-bot-backend"
version = "0.1.0"
description = "FastAPI backend for Hyperliquid HyperEVM farming simulator"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "httpx>=0.27.0",
  "sse-starlette>=2.1.3",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.3.4"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = ["E501", "E402", "F401", "E712"]
